--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,8 +1,33 @@
 body, html {
     width: 100%;
     height: 100%;
+    background-image: url("../images/burn.jpg");
+    background-position: center;
+    background-repeat: no-repeat; 
+    background-size: cover;
+    overflow: hidden;
 }
 
 #dogvalues {
-    width: 20%;
+    width: auto;
+    opacity: 0.55;
+    border-radius: 20px;
+    height: 100%;
+}
+
+img {
+    -webkit-filter: contrast(1.5) invert(0.3) sepia(1);
+    filter: contrast(1.5) invert(0.3) sepia(1);
+}
+
+#dog {
+    background-color: rgb(194, 0, 0);
+    margin: auto;
+    border-radius: 20px;
+    height: 320px;
+}
+
+h1 {
+    color: #fff;
+    text-align: center;
 }
